apps/michelin/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: michelin-backend
  namespace: michelin
  annotations:
    deploy-sha: "c37ed7b (2026-06-16T20:19:45Z)"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: michelin-backend
  template:
    metadata:
      labels:
        app: michelin-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/thysmajs/michelin-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
