apps/michelin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michelin-ingress
  namespace: michelin
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: michelin.thysmadev.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: michelin-frontend
            port:
              number: 80
  - host: michelin-api.thysmadev.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: michelin-backend
            port:
              number: 3000
